--- a/src/markdown/mas/maak_figuren_rapport.Rmd
+++ b/src/markdown/mas/maak_figuren_rapport.Rmd
@@ -47,6 +47,7 @@ source(here("src", "R", "create_figures.R"))
 dir.create("media/distance", FALSE)
 out_folder_distance <- here("media/distance")
 dsmodel_path <- here("src/markdown/mas/distance_models")
+beheermodel_path <- here("src/markdown/mas/analyses_cache")
 ```
 
 
@@ -238,3 +239,139 @@ for (spec in species) {
          height = 6)
 }
 ```
+
+
+# Beheerovereenkomsten
+## Oostelijke leemstreek
+
+```{r}
+dir.create("media/beheerovereenkomsten/oostelijke_leemstreek", FALSE)
+mod_final_olpropsb_list <- readRDS(here(beheermodel_path,
+                                        "mod_final_olpropsb_list.rds"))
+```
+
+```{r}
+# get posterior draws for parameters of interest
+draws_olpropsb_list <- lapply(mod_final_olpropsb_list, create_draws_df)
+draws_olpropsb_list_wt <- lapply(mod_final_olpropsb_list,
+                                 create_weighted_draws_df)
+```
+
+```{r}
+min_threshold <- log(0.8)
+max_threshold <- log(1.25)
+
+area_prop_cats <- tibble(
+  area_prop_sb_cat = c("nulbeleid", "laagbeleid", "middellaagbeleid",
+                       "middelhoogbeleid", "hoogbeleid"),
+  prop_area_sb = c("0", "<0.04", "0.04-0.07", "0.07-0.1", ">0.1")
+  ) %>%
+  rowid_to_column("order")
+
+area_prop_cats2 <- tibble(
+  area_prop_sb_cat = c("nulbeleid", "laagbeleid", "hoogbeleid"),
+  prop_area_sb = c("0", "<0.07", ">0.07")
+  ) %>%
+  rowid_to_column("order")
+```
+
+```{r}
+for (spec in names(draws_olpropsb_list)) {
+  file <- paste0("beleidstoestand_fine_", tolower(spec), ".jpg")
+  
+  p <- draws_olpropsb_list[[spec]] %>%
+    left_join(area_prop_cats, by = join_by(area_prop_sb_cat)) %>%
+    mutate(label = paste0(area_prop_sb_cat, "\n(", prop_area_sb, ")"),
+           label = reorder(label, order, decreasing = FALSE)) %>%
+    ggplot(aes(x = label)) +
+      geom_violin(aes(y = value_log, fill = trend_coarse),
+                  colour = alpha("white", 0)) +
+      geom_hline(yintercept = 0, linetype = "longdash", colour = "black") +
+      geom_hline(yintercept = c(min_threshold, max_threshold),
+                 linetype = "dotdash") +
+      geom_errorbar(aes(ymin = lcl_log, ymax = ucl_log),
+                    linewidth = 1, colour = "black", width = 0.1) +
+      geom_point(aes(y = median_log),
+                 size = 2.2, colour = "black") +
+      scale_fill_manual(values =  c("chartreuse3",
+                                    "gold",
+                                    "firebrick1",
+                                    "skyblue"),
+                        drop = FALSE) +
+      labs(y = "Procentueel verschil t.o.v. nulbeleid",
+           x = "",
+           fill = "Verschil") +
+      scale_y_continuous(
+        breaks = index_breaks(),
+        labels = index_labels,
+        minor_breaks = minor_breaks(),
+        sec.axis = sec_axis(~ exp(.),
+          breaks = index_breaks_rev(),
+          labels = index_labels_rev(),
+          name = "Relatief verschil t.o.v. nulbeleid")
+        ) +
+      theme(
+        legend.position = "right",
+        legend.background = element_rect(fill = "white", color = "darkgrey"),
+        legend.margin = margin(6, 6, 6, 6)
+        )
+  
+  ggsave(here("media", "beheerovereenkomsten", "oostelijke_leemstreek"
+              , file),
+         p,
+         dpi = 300,
+         width = 8,
+         height = 6)
+}
+```
+
+```{r}
+for (spec in names(draws_olpropsb_list_wt)) {
+  file <- paste0("beleidstoestand_coarse_", tolower(spec), ".jpg")
+  
+  p <- draws_olpropsb_list_wt[[spec]] %>%
+    left_join(area_prop_cats2, by = join_by(area_prop_sb_cat)) %>%
+    mutate(label = paste0(area_prop_sb_cat, "\n(", prop_area_sb, ")"),
+           label = reorder(label, order, decreasing = FALSE)) %>%
+    ggplot(aes(x = label)) +
+      geom_violin(aes(y = value_log, fill = trend_coarse),
+                  colour = alpha("white", 0)) +
+      geom_hline(yintercept = 0, linetype = "longdash", colour = "black") +
+      geom_hline(yintercept = c(min_threshold, max_threshold),
+                 linetype = "dotdash") +
+      geom_errorbar(aes(ymin = lcl_log, ymax = ucl_log),
+                    linewidth = 1, colour = "black", width = 0.1) +
+      geom_point(aes(y = median_log),
+                 size = 2.2, colour = "black") +
+      scale_fill_manual(values =  c("chartreuse3",
+                                    "gold",
+                                    "firebrick1",
+                                    "skyblue"),
+                        drop = FALSE) +
+      labs(y = "Procentueel verschil t.o.v. nulbeleid",
+           x = "",
+           fill = "Verschil") +
+      scale_y_continuous(
+        breaks = index_breaks(),
+        labels = index_labels,
+        minor_breaks = minor_breaks(),
+        sec.axis = sec_axis(~ exp(.),
+          breaks = index_breaks_rev(),
+          labels = index_labels_rev(),
+          name = "Relatief verschil t.o.v. nulbeleid")
+        ) +
+      theme(
+        legend.position = "right",
+        legend.background = element_rect(fill = "white", color = "darkgrey"),
+        legend.margin = margin(6, 6, 6, 6)
+        )
+  
+  ggsave(here("media", "beheerovereenkomsten", "oostelijke_leemstreek"
+              , file),
+         p,
+         dpi = 300,
+         width = 8,
+         height = 6)
+}
+```
+
